Added radius property to reactions